poke/testsuite/poke.pkl/struct-method-diag-8.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    method foo = void:
      {
        method bar = void: {} /* { dg-error "method" } */
        bar;
      }
  };
